[metadata]
name = foolbox
url = https://github.com/bethgelab/foolbox
license = MIT
author = Jonas Rauber & Wieland Brendel
author_email = opensource@bethgelab.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Artificial Intelligence
description = Python toolbox to create adversarial examples that fool neural networks
long_description = file: README.rst

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
tests_require =
    pytest
    pytest-cov

[tool:pytest]
addopts =
    -v --doctest-modules
    --cov=foolbox --cov-report term-missing
python_files = test*.py  # irrelevant for doctest-modules
testpaths = 'foolbox/'

[build_sphinx]
warning-is-error = 1
